Update tool docs

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,20 +1,65 @@
 ---
 title: 'Introduction'
-description: 'Welcome to the Toolbox PHP Package Documentation'
+description: 'Build Powerful AI Agents with Laravel'
 ---
 
-# Toolbox PHP Package
+# Intro
 
-Toolbox is a comprehensive PHP package that provides a collection of useful tools for common development tasks. It includes tools for weather data, cryptocurrency operations, email handling, Eloquent database interactions, and time management.
+Toolbox is an open source, PHP-based AI agent standard library that enables you to build powerful AI applications with Laravel and the Echolabs SDK. It provides a collection of production-ready AI tools that can be used individually or combined to create sophisticated AI agents.
 
-## Features
+## Why Toolbox?
 
-- **Weather Tool**: Fetch and process weather data
-- **Crypto Tool**: Handle cryptocurrency-related operations
-- **Email Tool**: Simplified email sending and management
-- **Eloquent Tool**: Enhanced Eloquent ORM utilities
-- **Time Tool**: Time manipulation and formatting utilities
+Toolbox's standard library of PHP AI tools are designed for both direct PHP usage and LLM-based interactions, making it perfect for:
+- Building AI assistants that can interact with your Laravel application
+- Creating autonomous agents that can perform complex tasks
+- Extending your existing applications with AI capabilities
+
+## Integration Support
+
+Toolbox works seamlessly with:
+- **Echolabs SDK**: First-class support for AI interactions
+- **Laravel Framework**: Native Laravel integration
+- **OpenAI**: Compatible with latest AI models
+- **Any LLM Provider**: Flexible architecture supports multiple providers
+
+## AI Tools & Capabilities
+
+Each tool in the library is designed for both direct usage and AI agent integration:
+
+- **Weather Tool**: 
+  - Real-time weather data integration
+  - Location-aware weather predictions
+  - Historical weather data analysis
+
+- **Crypto Tool**: 
+  - Live cryptocurrency price tracking
+  - Market analysis and predictions
+  - Trading data integration
+
+- **Email Tool**: 
+  - AI-powered email composition
+  - Smart email parsing and analysis
+  - Automated email workflows
+
+- **Eloquent Tool**: 
+  - AI-enhanced database queries
+  - Natural language to SQL conversion
+  - Smart data relationships
+
+- **Time Tool**: 
+  - Intelligent time zone handling
+  - Natural language time parsing
+  - Schedule optimization
+
+## Use Cases
+
+Build powerful AI applications such as:
+- Virtual assistants that can access your application's data
+- AI-powered customer service agents
+- Automated data analysis systems
+- Natural language interfaces to your databases
+- Smart notification and alert systems
 
 ## Getting Started
 
-Check out our [Installation Guide](/installation) to get started with Toolbox.
+Check out our [Installation Guide](/docs/installation) to begin building your AI agents with Toolbox.
