--- a/docs/tools/eloquent.mdx
+++ b/docs/tools/eloquent.mdx
@@ -9,6 +9,7 @@ A tool for executing Eloquent queries on Laravel models.
 
 **package**: `jordan-price/toolbox`  
 **class**: `JordanPrice\Toolbox\Tools\Eloquent\EloquentTool`  
+**env vars**: `None`  
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Eloquent/EloquentTool.php)  
 
 ## Install
