--- a/docs/tools/time.mdx
+++ b/docs/tools/time.mdx
@@ -9,6 +9,7 @@ A comprehensive tool for handling time operations and timezone conversions.
 
 **package**: `jordan-price/toolbox`  
 **class**: `JordanPrice\Toolbox\Tools\Time\TimeTool`  
+**env vars**: `None`  
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Time/TimeTool.php)  
 
 ## Install
