--- a/docs/tools/crypto.mdx
+++ b/docs/tools/crypto.mdx
@@ -9,6 +9,7 @@ A tool for fetching cryptocurrency price information.
 
 **package**: `jordan-price/toolbox`  
 **class**: `JordanPrice\Toolbox\Tools\Crypto\CryptoTool`  
+**env vars**: `None`  
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Crypto/CryptoTool.php)  
 
 ## Install
