--- a/docs/tools/email.mdx
+++ b/docs/tools/email.mdx
@@ -8,7 +8,8 @@ description: 'Email sending utility'
 A tool for sending emails.
 
 **package**: `jordan-price/toolbox`  
-**class**: `JordanPrice\Toolbox\Tools\Email\EmailTool`  
+**class**: `JordanPrice\Toolbox\Tools\Email\EmailTool`
+**env vars**: `None`    
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Email/EmailTool.php)  
 
 ## Install
