--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,65 +1,27 @@
 ---
 title: 'Introduction'
-description: 'Build Powerful AI Agents with Laravel'
+description: 'A collection of AI-powered tools for Laravel'
 ---
 
-# Intro
+# Introduction
 
-Toolbox is an open source, PHP-based AI agent standard library that enables you to build powerful AI applications with Laravel and the Echolabs SDK. It provides a collection of production-ready AI tools that can be used individually or combined to create sophisticated AI agents.
+The Toolbox package provides a collection of AI-powered tools designed to work with Laravel applications.
 
-## Why Toolbox?
+## Features
 
-Toolbox's standard library of PHP AI tools are designed for both direct PHP usage and LLM-based interactions, making it perfect for:
-- Building AI assistants that can interact with your Laravel application
-- Creating autonomous agents that can perform complex tasks
-- Extending your existing applications with AI capabilities
+- **Weather Tool**: Get real-time weather data and forecasts
+- **Time Tool**: Handle time operations and timezone conversions
+- **Crypto Tool**: Fetch cryptocurrency price information
+- **Email Tool**: Send emails with ease
+- **Eloquent Tool**: Execute database queries using natural language
 
-## Integration Support
+## AI Integration
 
-Toolbox works seamlessly with:
-- **Echolabs SDK**: First-class support for AI interactions
-- **Laravel Framework**: Native Laravel integration
-- **OpenAI**: Compatible with latest AI models
-- **Any LLM Provider**: Flexible architecture supports multiple providers
-
-## AI Tools & Capabilities
-
-Each tool in the library is designed for both direct usage and AI agent integration:
-
-- **Weather Tool**: 
-  - Real-time weather data integration
-  - Location-aware weather predictions
-  - Historical weather data analysis
-
-- **Crypto Tool**: 
-  - Live cryptocurrency price tracking
-  - Market analysis and predictions
-  - Trading data integration
-
-- **Email Tool**: 
-  - AI-powered email composition
-  - Smart email parsing and analysis
-  - Automated email workflows
-
-- **Eloquent Tool**: 
-  - AI-enhanced database queries
-  - Natural language to SQL conversion
-  - Smart data relationships
-
-- **Time Tool**: 
-  - Intelligent time zone handling
-  - Natural language time parsing
-  - Schedule optimization
-
-## Use Cases
-
-Build powerful AI applications such as:
-- Virtual assistants that can access your application's data
-- AI-powered customer service agents
-- Automated data analysis systems
-- Natural language interfaces to your databases
-- Smart notification and alert systems
+All tools in this package are designed to work with Prism, allowing you to:
+- Execute operations using natural language
+- Handle complex queries with AI assistance
+- Integrate AI capabilities into your Laravel applications
 
 ## Getting Started
 
-Check out our [Installation Guide](/docs/installation) to begin building your AI agents with Toolbox.
+Check out our [installation guide](/installation) to get started, or explore the individual tool documentation for detailed usage examples.
