Update titles and descriptions for the tools

--- a/docs/tools/eloquent.mdx
+++ b/docs/tools/eloquent.mdx
@@ -1,16 +1,12 @@
 ---
 title: 'Eloquent'
-description: 'Laravel Eloquent query tool'
+description: 'A tool for executing Eloquent queries on Laravel models.'
 ---
 
-# Eloquent Tool
-
-A tool for executing Eloquent queries on Laravel models.
-
-**package**: `jordan-price/toolbox`  
-**class**: `JordanPrice\Toolbox\Tools\Eloquent\EloquentTool`  
-**env vars**: `None`  
-**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Eloquent/EloquentTool.php)  
+**package**: `jordan-price/toolbox`
+**class**: `JordanPrice\Toolbox\Tools\Eloquent\EloquentTool`
+**env vars**: `None`
+**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Eloquent/EloquentTool.php)
 
 ## Install
 
