--- a/docs/tools/email.mdx
+++ b/docs/tools/email.mdx
@@ -1,11 +1,7 @@
 ---
 title: 'Email'
-description: 'Email sending utility'
+description: 'A tool for sending emails using Laravel Mail.'
 ---
-
-# Email Tool
-
-A tool for sending emails.
 
 **package**: `jordan-price/toolbox`
 **class**: `JordanPrice\Toolbox\Tools\Email\EmailTool`
