--- a/docs/tools/crypto.mdx
+++ b/docs/tools/crypto.mdx
@@ -1,16 +1,12 @@
 ---
 title: 'Crypto'
-description: 'Cryptocurrency price information tool'
+description: 'A tool for fetching cryptocurrency price information.'
 ---
 
-# Crypto Tool
-
-A tool for fetching cryptocurrency price information.
-
-**package**: `jordan-price/toolbox`  
-**class**: `JordanPrice\Toolbox\Tools\Crypto\CryptoTool`  
-**env vars**: `None`  
-**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Crypto/CryptoTool.php)  
+**package**: `jordan-price/toolbox`
+**class**: `JordanPrice\Toolbox\Tools\Crypto\CryptoTool`
+**env vars**: `None`
+**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Crypto/CryptoTool.php)
 
 ## Install
 
