--- a/docs/tools/time.mdx
+++ b/docs/tools/time.mdx
@@ -1,16 +1,12 @@
 ---
 title: 'Time'
-description: 'Time manipulation and formatting utilities'
+description: 'A tool for handling time operations and timezone conversions.'
 ---
 
-# Time Tool
-
-A comprehensive tool for handling time operations and timezone conversions.
-
-**package**: `jordan-price/toolbox`  
-**class**: `JordanPrice\Toolbox\Tools\Time\TimeTool`  
-**env vars**: `None`  
-**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Time/TimeTool.php)  
+**package**: `jordan-price/toolbox`
+**class**: `JordanPrice\Toolbox\Tools\Time\TimeTool`
+**env vars**: `None`
+**source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Time/TimeTool.php)
 
 ## Install
 
