Add publish step

--- a/docs/tools/eloquent.mdx
+++ b/docs/tools/eloquent.mdx
@@ -8,10 +8,16 @@ description: 'A tool for executing Eloquent queries on Laravel models.'
 **env vars**: `None`    
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Eloquent/EloquentTool.php)      
 
-## Install
+## Publish
+
+Optionally, you can publish the configuration file to make modifications:
 
 ```bash
-composer require jordan-price/toolbox
+# Publish just this tool
+php artisan toolbox:publish eloquent
+
+# Or publish all tools
+php artisan toolbox:publish
 ```
 
 ## Prism Integration
