--- a/docs/tools/time.mdx
+++ b/docs/tools/time.mdx
@@ -8,10 +8,16 @@ description: 'A tool for handling time operations and timezone conversions.'
 **env vars**: `None`    
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Time/TimeTool.php)     
 
-## Install
+## Publish
+
+Optionally, you can publish the configuration file to make modifications:
 
 ```bash
-composer require jordan-price/toolbox
+# Publish just this tool
+php artisan toolbox:publish time
+
+# Or publish all tools
+php artisan toolbox:publish
 ```
 
 ## Prism Integration
