--- a/docs/tools/crypto.mdx
+++ b/docs/tools/crypto.mdx
@@ -8,10 +8,16 @@ description: 'A tool for fetching cryptocurrency price information.'
 **env vars**: `None`    
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Crypto/CryptoTool.php)  
 
-## Install
+## Publish
+
+Optionally, you can publish the configuration file to make modifications:
 
 ```bash
-composer require jordan-price/toolbox
+# Publish just this tool
+php artisan toolbox:publish crypto
+
+# Or publish all tools
+php artisan toolbox:publish
 ```
 
 ## Prism Integration
