--- a/docs/tools/time.mdx
+++ b/docs/tools/time.mdx
@@ -8,18 +8,6 @@ description: 'A tool for handling time operations and timezone conversions.'
 **env vars**: `None`    
 **source**: [GitHub](https://github.com/jordan-price/toolbox/blob/main/src/Tools/Time/TimeTool.php)     
 
-## Publish
-
-Optionally, you can publish the configuration file to make modifications:
-
-```bash
-# Publish just this tool
-php artisan toolbox:publish time
-
-# Or publish all tools
-php artisan toolbox:publish
-```
-
 ## Prism Integration
 
 ```php
@@ -36,6 +24,20 @@ $prism = Prism::text()
 
 $response = $prism->generate();
 ```
+
+## Publish
+
+Optionally, you can publish the configuration file to make modifications:
+
+```bash
+# Publish just this tool
+php artisan toolbox:publish time
+
+# Or publish all tools
+php artisan toolbox:publish --all
+```
+
+
 
 ## Methods
 
