Update how tools are created

--- a/docs/tools/crypto.mdx
+++ b/docs/tools/crypto.mdx
@@ -15,10 +15,12 @@ use EchoLabs\Prism\Prism;
 use EchoLabs\Prism\Enums\Provider;
 use EchoLabs\Prism\Enums\ToolChoice;
 
+$cryptoTool = new CryptoTool();
+
 $prism = Prism::text()
     ->using(Provider::Anthropic, 'claude-3-5-sonnet-latest')
     ->withPrompt('What is the current price of Bitcoin?')
-    ->withTools([CryptoTool::class])  // Pass the tool class directly
+    ->withTools([$cryptoTool])  // Pass the tool instance
     ->toolChoice(ToolChoice::Any);
 
 $response = $prism->generate();
