--- a/docs/tools/eloquent.mdx
+++ b/docs/tools/eloquent.mdx
@@ -15,10 +15,12 @@ use EchoLabs\Prism\Prism;
 use EchoLabs\Prism\Enums\Provider;
 use EchoLabs\Prism\Enums\ToolChoice;
 
+$eloquentTool = new EloquentTool();
+
 $prism = Prism::text()
     ->using(Provider::Anthropic, 'claude-3-5-sonnet-latest')
     ->withPrompt('Find all active users')
-    ->withTools([EloquentTool::class])  // Pass the tool class directly
+    ->withTools([$eloquentTool])  // Pass the tool instance
     ->toolChoice(ToolChoice::Any);
 
 $response = $prism->generate();
