Update prism links

--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -33,7 +33,7 @@ WEATHER_API_KEY=your_api_key
 
 ## Usage with Prism
 
-All tools in this package are designed to work with Echolabs Prism. Here's a basic example:
+All tools in this package are designed to work with Echolabs [Prism](https://prism.echolabs.dev/getting-started/introduction.html)`. Here's a basic example:
 
 ```php
 use EchoLabs\Prism\Prism;
