--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introduction'
-description: 'A collection of AI-powered tools for Laravel'
+description: 'A collection of AI-powered tools for [Prism](https://prism.echolabs.dev/getting-started/introduction.html) and Laravel'
 ---
 
 ## Features
@@ -13,7 +13,7 @@ description: 'A collection of AI-powered tools for Laravel'
 
 ## AI Integration
 
-All tools in this package are designed to work with Prism, allowing you to:
+All tools in this package are designed to work with [Prism](https://prism.echolabs.dev/getting-started/introduction.html), allowing you to:
 - Execute operations using natural language
 - Handle complex queries with AI assistance
 - Integrate AI capabilities into your Laravel applications
