Add multi tool calling to the docs

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -17,6 +17,9 @@ All tools in this package are designed to work with [Prism](https://prism.echola
 - Execute operations using natural language
 - Handle complex queries with AI assistance
 - Integrate AI capabilities into your Laravel applications
+- Chain multiple tools for complex workflows
+
+Learn more about different [tool calling patterns](/tool-calling) and best practices for using multiple tools together.
 
 ## Getting Started
 
